# mipt-rust

./: .deadlines.yml  .gitignore  .grader-ci.yml  Cargo.toml  LICENSE  README.md
docs/: additional-setup.md  reading-list.md  setup.md  solving.md  syllabus.md
lectures/: README.md
lectures/lecture-01/: slides.tex
lectures/lecture-01/code/: vector.c
lectures/lecture-02/: slides.tex
lectures/lecture-03/: slides.tex
lectures/lecture-04/: slides.tex
lectures/lecture-05/: slides.tex
lectures/lecture-06/: slides.tex
lectures/lecture-07/: slides.tex
lectures/lecture-08/: slides.tex
problems/async/babencoin/: .config.yml  Cargo.toml  README.md
problems/async/babencoin/config/: example.yaml
problems/async/babencoin/data/: genesis.crt  test.pem  test_block.json
problems/async/babencoin/src/: block_forest.rs  data.rs  lib.rs  main.rs  node.rs  util.rs
problems/async/babencoin/src/node/: gossip_service.rs  mining_service.rs  peer_service.rs
problems/async/babencoin/tests/: gossip_service.rs  mining_service.rs  peer_service.rs
problems/async/babencoin/tests/helpers/: mod.rs
problems/async/crawler/: Cargo.toml  README.md
problems/borrowing/bst/: .config.yml  Cargo.toml  README.md
problems/borrowing/context/: Cargo.toml  README.md
problems/borrowing/pstack/: Cargo.toml  README.md
problems/intro/combinations/: Cargo.toml  README.md
problems/intro/conway/: Cargo.toml  README.md
problems/intro/min-queue/: .config.yml  Cargo.toml  README.md
problems/macros-2/orm/: .config.yml  Cargo.toml  README.md
problems/macros-2/orm/orm-derive/: Cargo.toml
problems/macros-2/orm/orm-derive/src/: lib.rs
problems/macros-2/orm/src/: connection.rs  data.rs  error.rs  lib.rs  object.rs  storage.rs  transaction.rs
problems/macros-2/orm/tests/: tests.rs
problems/macros/fswalk/: .config.yml  Cargo.toml  README.md
problems/macros/gc/: .config.yml  Cargo.toml  README.md
problems/macros/mini-frunk/: .config.yml  Cargo.toml  README.md
problems/macros/mini-frunk/core/: Cargo.toml
problems/macros/mini-frunk/core/src/: field.rs  generic.rs  hlist.rs  labelled.rs  lib.rs  transmogrify.rs
problems/macros/mini-frunk/derives/: Cargo.toml
problems/macros/mini-frunk/derives/src/: generic.rs  labelled.rs  lib.rs
problems/macros/mini-frunk/src/: lib.rs
problems/macros/mini-frunk/tests/: generic.rs  hlist_macro.rs  labelled.rs  transmogrify.rs
problems/macros/mini-frunk/tests/common/: mod.rs
problems/modules/ripgzip/: .config.yml  Cargo.toml  README.md  test.py
problems/modules/trie/: .config.yml  Cargo.toml  README.md
problems/parallel/pargrep/: Cargo.toml  README.md
problems/parallel/tcp-proxy/: Cargo.toml  README.md
problems/parallel/thread-pool/: Cargo.toml  README.md
problems/std-collections/comm/: .config.yml  Cargo.toml  (+1 more)
tools/rover/: Cargo.toml  README.md
tools/rover/src/: main.rs
tools/rover/src/compose/: cargo_root.rs  config.rs  dir.rs  file.rs  mod.rs  process.rs  prune.rs  run_compose.rs  skip.rs
tools/rover/src/repository/: command.rs  config.rs  context.rs  copying.rs  mod.rs  problem.rs  repo.rs  step.rs  toolchain.rs
tools/rover/src/submitting/: mod.rs  submit.rs
tools/rover/src/testing/: mod.rs  report.rs  test.rs
tools/rover/src/util/: mod.rs  util_macro.rs
(+92 files in other folders)
