[package]
name = "babencoin"
version = "0.1.0"
authors = ["Sergei Fomin <sergio-dna@yandex.ru>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
byteorder = "1.4"
chrono = "0.4"
crossbeam = "0.8"
humantime-serde = "1.0"
log = "0.4"
num-bigint = "0.4"
rayon = "1.5"
rand = "0.8"
rsa = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
sha3 = "0.9"
stderrlog = "0.5"
structopt = "0.3"

[dev-dependencies]
tempfile = "3.2"
rand = "0.8"
