[package]
name = "mini-frunk-derive"
version = "0.1.0"
authors = ["Alexander Stanovoy <alex.stanovoy@gmail.com>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
mini-frunk-core = { path = "../core" }
proc-macro2 = ">= 1.0.37"
quote = ">= 1.0.18"
syn = { version = ">= 1.0.91", features = ["full"] }
